--- a/Python 102/Mod1_2-1_IntroPy_Practice.ipynb
+++ b/Python 102/Mod1_2-1_IntroPy_Practice.ipynb
@@ -242,15 +242,36 @@
       "metadata": {
         "id": "Dfsx1vysmyd4",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 151
+        },
+        "outputId": "57054b5c-ac09-45b3-f3cf-290b38eb6e46"
       },
       "source": [
         "# [ ] Print the first 4 letters of name on new line\n",
         "name = \"Hiroto\"\n",
-        "\n"
+        "\n",
+        "for ltr in name[0:4]:\n",
+        "  print(\"\\n\" + ltr)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "H\n",
+            "\n",
+            "i\n",
+            "\n",
+            "r\n",
+            "\n",
+            "o\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -293,11 +314,11 @@
       "metadata": {
         "id": "sUBB9nqamyeW",
         "colab_type": "code",
+        "outputId": "9f300550-cf20-41a7-f0f1-05bdbe66da09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "9f300550-cf20-41a7-f0f1-05bdbe66da09"
+        }
       },
       "source": [
         "# [ ] Create Mystery Name\n",
@@ -318,7 +339,7 @@
         "print(new_name)\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,15 +378,33 @@
       "metadata": {
         "id": "wGLuAQQwmyec",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2d26915d-bb75-48ed-9a35-8044ef0c2a3e"
       },
       "source": [
         "# [ ] find and display the length of the string: topic\n",
         "topic = \"len() returns the length of a string\"\n",
-        "\n"
+        "\n",
+        "len(topic)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "36"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -433,15 +472,30 @@
       "metadata": {
         "id": "dYGh80Ggmye8",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "4aa9055e-ed7f-4a5d-bcff-46582b3672c1"
       },
       "source": [
         "# [ ] find and report (print) number of w's, o's + use of word \"code\"\n",
         "work_tip = \"Good code is commented code\"\n",
-        "\n"
+        "\n",
+        "print(work_tip.count(\"w\"))\n",
+        "print(work_tip.count(\"o\"))\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -508,15 +562,47 @@
       "metadata": {
         "id": "MfhZU8SymyfR",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        },
+        "outputId": "55454d19-849b-4239-a186-433364e5b432"
       },
       "source": [
         "# [] create words after \"G\"\n",
         "# sample quote \"Wheresoever you go, go with all your heart\" ~ Confucius (551 BC - 479 BC)\n",
-        "\n"
+        "\n",
+        "quote = input(\"Please enter a 1 sentence quote, non-alpha seperate words: \")\n",
+        "\n",
+        "word = \"\"\n",
+        "\n",
+        "for letter in quote:\n",
+        "    if letter.isalpha():\n",
+        "        word += letter\n",
+        "    elif word.lower() >= 'h':\n",
+        "        print(word.upper())\n",
+        "        word = ''\n",
+        "    else:\n",
+        "        word = ''\n",
+        "if word.lower() >= 'h':\n",
+        "    print(word.upper())\n",
+        "  \n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Please enter a 1 sentence quote, non-alpha seperate words: Wheresoever you go, go with all your heart\n",
+            "WHERESOEVER\n",
+            "YOU\n",
+            "WITH\n",
+            "YOUR\n",
+            "HEART\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
